-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 13
-
Component/s: hotspot
-
b10
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8226865 | 11.0.5 | Matthias Baesken | P4 | Resolved | Fixed | b01 |
| JDK-8226727 | 11.0.4 | Matthias Baesken | P4 | Resolved | Fixed | b09 |
There are a few places in the hotspot code base where open is used instead of os::open. Those should be adjusted.
- backported by
-
JDK-8226727 replace open by os::open in hotspot coding
-
- Resolved
-
-
JDK-8226865 replace open by os::open in hotspot coding
-
- Resolved
-