8218811: replace open by os::open in hotspot coding

Reviewed-by: dholmes, iklam, stuefe